Make navbar gray + add logo.png

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -21,7 +21,7 @@
     <header class="site-header">
         <nav class="nav-container">
             <a href="{{ SITEURL }}/" class="logo">
-                <img src="{{ SITEURL }}/images/logo.jpg" alt="{{ SITENAME }}">
+                <img src="{{ SITEURL }}/images/logo.png" alt="{{ SITENAME }}">
             </a>
             
             <button class="mobile-menu-toggle" aria-label="Toggle menu">
@@ -92,7 +92,7 @@
         </div>
         
         <div class="footer-bottom">
-            <img src="{{ SITEURL }}/images/logo.jpg" alt="{{ SITENAME }}" class="footer-bottom-logo">
+            <img src="{{ SITEURL }}/images/logo.png" alt="{{ SITENAME }}" class="footer-bottom-logo">
             <p>&copy; {{ DATE_MODIFIED.year if DATE_MODIFIED else "2026" }} Data-Driven Wisconsin. All rights reserved.</p>
         </div>
     </footer>
