Test GitHub Actions: Made a small edit

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -53,7 +53,7 @@
                 <li><a href="{{ SITEURL }}/pages/past-events.html">Past Events</a></li>
             </ul>
             
-            <a href="#register" class="btn btn-primary nav-cta">Register</a>
+            <a href="#register" class="btn btn-primary nav-cta">Registers</a>
         </nav>
     </header>
 
